# visey-recommender-

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_GITHUB_COMMANDS.txt  GITHUB_QUICK_SETUP.md  LICENSE  PUSH_TO_GITHUB.md  README.md  WARP.md  launch-browser-test.py  pyproject.toml  pytest.ini  quick-test.py  requirements-dev.txt  requirements.txt  setup-frontend.py  setup-github-repo.py  start-frontend.py  start-local.py  start-test-servers.py  task.md  test-frontend-simple.py  test-local.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/chatmodes/: code.chatmode.md
.github/workflows/: ci.yml  release.yml
docs/: wordpress-architecture.md  wordpress-integration.md
frontend/: README.md  demo-data.js  index.html  script.js  server.py  styles.css
load-balancer/: docker-compose.yml
load-balancer/haproxy/: Dockerfile  haproxy.cfg
load-balancer/kubernetes/: deployment.yaml  redis.yaml
load-balancer/monitoring/: prometheus.yml
load-balancer/nginx/: Dockerfile  nginx.conf
load-balancer/scripts/: deploy.sh
scripts/: benchmark.py  load_test.py  performance_monitor.py  run_tests.py  wp_manager.py
tests/: conftest.py  test_api.py  test_health.py  test_metrics.py  test_recommender.py  test_validation.py  test_wp_client.py  test_wp_service.py
visey_recommender/: __init__.py  config.py
visey_recommender/api/: main.py  schemas.py
visey_recommender/clients/: wp_client.py
visey_recommender/embeddings/: semantic.py
visey_recommender/features/: engineer.py
visey_recommender/recommender/: baseline.py  matrix_factorization.py
visey_recommender/services/: popularity.py  wp_service.py
visey_recommender/storage/: cache.py  feedback_store.py
visey_recommender/tasks/: __init__.py  scheduler.py
visey_recommender/utils/: benchmarks.py  config_manager.py  health.py  logging.py  metrics.py  rate_limiter.py  retry.py  validation.py
